# rust_wss

./: .env  Cargo.toml
src/: auth.rs  db.rs  error.rs  main.rs  rate_limiter.rs  routes.rs  ws.rs
src/handlers/: auth_handler.rs  book_handler.rs  email_handler.rs  mod.rs  ws_handler.rs
src/models/: book.rs  email.rs  mod.rs  user.rs
