[package]
name = "rust_wss"
version = "0.1.0"
edition = "2024"

[dependencies]
# Fitur "ws" sangat penting untuk WebSocket
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "compression-br", "cors"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19.0"
bcrypt = "0.15.1"
validator = { version = "0.18.1", features = ["derive"] }
futures-util = "0.3.30"
thiserror = "1.0.61"
anyhow = "1.0.86"
governor = "0.6.0"

# Rate limiting
tower_governor = "0.4.1"

# Dependensi yang dibutuhkan oleh Axum 0.7
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

[features]
default = []